feat: add role and reset migration (#1)
